--- a/vaadin-mvvm/wiki/documentation.textile
+++ b/vaadin-mvvm/wiki/documentation.textile
@@ -37,6 +37,7 @@ The Problem:
 * The UIScoped Vaadin-beans are kept in this Context
 * The Context is somehow (?) bound to the BeanStoreContainer which is originally SessionScoped
 * CODI creates all Scopes and CDI injection works but when BeanManagerImpl.getContext() is called the CODI contexts are not active. 
+* The UIScopedContext calls _getSessionBoundBeanStoreContainer()_ in line 70. *A solution might be to replace the UIScopedContext with a new WebsocketUIScopedContext which retrieves the beanStoreContainer from the a CODI Scope instead from session.* 
 
 h1. Solution approach 
 
@@ -57,4 +58,6 @@ Using CODI´s new scopes to dynamically switch from @SessionScope to (e.g.) CODI
 h1. Useful Resources / Links
 
 "CDI Custom Scopes":http://rpestano.wordpress.com/2013/06/30/cdi-custom-scope/
+"CDI Spec. Website":http://www.cdi-spec.org/news/
+"Problems when CDIConversionFilter is not mapped (?)":https://issues.jboss.org/browse/CDI-411
  
